basic css completed, layout left

--- a/amphibians.html
+++ b/amphibians.html
@@ -9,6 +9,7 @@
   <body>
     <h1>Amphibians</h1>
     <p class="indent">
+      <a href="#tiger">Tiger Salamander</a>
       <b><span>F</span>rog</b>is any member of a diverse and largely semiaquatic
       group of short-bodied, tailless amphibian vertebrates composing the order
       Anura[1] (coming from the Ancient Greek ἀνούρα, literally 'without tail').
@@ -74,7 +75,7 @@
       src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQKRJpcAqF8g-yQiMAIACMIlTLN4a9WV6qooQ&s"
       alt=""
     />
-    <p>
+    <p id="tiger">
       These salamanders usually grow to a length of 6–8 in (15–20 cm) with a
       lifespan of around 12–15 years.[5] They are characterized by having
       markings varying in color on the back of their head, body, and tail.[6]
