--- a/fish.html
+++ b/fish.html
@@ -27,6 +27,8 @@
       src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d8/Siluriformes.png/500px-Siluriformes.png"
       alt=""
     />
+    <a href="#starfish">jump to starfish</a>
+
     <p>
       Catfish do not have scales; their bodies are often naked. In some species,
       their mucus-covered skin is used in cutaneous respiration, where the fish
@@ -44,7 +46,7 @@
       line ossicles with dorsal and ventral lamina.
     </p>
     <hr />
-    <p class="indent">
+    <p class="indent" id="starfish">
       <b><span>S</span>tarfish</b> or sea stars are a class of marine
       invertebrates generally shaped like a star polygon. (In common usage,
       these names are also often applied to ophiuroids, which are correctly
@@ -96,6 +98,6 @@
     />
     <br />
     <a class="home" href="index.html">Home</a>
-    <br>
+    <br />
   </body>
 </html>
