--- a/mammals.html
+++ b/mammals.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Mammals</h1>
+    <a href="#platypus">jump to platypus</a>
     <p class="indent">
       <b><span>H</span>umans(Homo sapiens) </b> are primates that belong to the
       biological family of great apes, characterized by hairlessness,
@@ -67,7 +68,7 @@
       manatees.
     </p>
     <hr />
-    <p class="indent">
+    <p class="indent" id="platypus">
       <b><span>P</span>latypus (Ornithorhynchus anatinus)</b>, sometimes
       referred to as the duck-billed platypus, is a semiaquatic, egg-laying
       mammal endemic to eastern Australia, including Tasmania. The platypus is
