--- a/reptiles.html
+++ b/reptiles.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Reptiles</h1>
+    <a href="#crocodile">jump to crocodile</a>
     <p class="indent">
       <b><span>S</span>nakes</b> are elongated limbless reptiles of the suborder
       Serpentes (/sɜːrˈpɛntiːz/).[2] Cladistically squamates, snakes are
@@ -63,7 +64,7 @@
       these pressures, many species are extinct or threatened with extinction.
     </p>
     <hr />
-    <p class="indent">
+    <p class="indent" id="crocodile">
       <b><span>C</span>rocodiles (family Crocodylidae) </b>or true crocodiles
       are large, semiaquatic reptiles that live throughout the tropics in
       Africa, Asia, the Americas and Australia. The term "crocodile" is
