--- a/index.html
+++ b/index.html
@@ -3,39 +3,54 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Creatures</title>
-    <link rel="stylesheet" href="global.css" />
+    <title>modified</title>
   </head>
+  <link rel="stylesheet" href="modi.css" />
   <body>
-    <h1>Types of Creatures</h1>
-    <ol>
-      <li>
-        <a href="mammals.html">Mammals:</a>
-        : Warm-blooded animals, usually with fur or hair, that give birth to
-        live young and produce milk (e.g., humans, kangaroos, platypuses).
-      </li>
-      <li>
-        <a href="birds.html">Bird:</a>
-        Warm-blooded, feathered animals that lay eggs and have wings (e.g.,
-        hawks, eagles).
-      </li>
-      <li>
-        <a href="fish.html">Fish:</a>
-        Cold-blooded aquatic animals with gills for breathing and fins for
-        swimming.
-      </li>
-      <li>
-        <a href="reptiles.html">Reptiles:</a> Cold-blooded animals with scales
-        or scutes, usually living on land and laying eggs (e.g., snakes,
-        lizards).
-      </li>
-      <li>
-        <a href="amphibians.html">Amphibians:</a> Cold-blooded animals that live
-        part of their lives in water and part on land, often with smooth, moist
-        skin (e.g., frogs).
-      </li>
-    </ol>
-    <br />
-    
+    <div class="header">
+      <h1>pm modi</h1>
+    </div>
+    <div class="container">
+      <img
+        src="https://c.ndtvimg.com/2024-06/2c4h1tuo_pm-modi_625x300_01_June_24.jpg"
+        alt=""
+      />
+      <h2>narender modi</h2>
+      <p>
+        Narendra Damodardas Modi[a] (born 17 September 1950) is an Indian
+        politician who has served as the prime minister of India since 2014.
+        Modi was the chief minister of Gujarat from 2001 to 2014 and is the
+        member of parliament (MP) for Varanasi. He is a member of the Bharatiya
+        Janata Party (BJP) and of the Rashtriya Swayamsevak Sangh (RSS), a
+        right-wing Hindutva paramilitary volunteer organisation. He is the
+        longest-serving prime minister outside the Indian National Congress.
+      </p>
+    </div>
+    <div class="works">
+      <h2>His Missions</h2>
+      <ul>
+        <li>
+          Smart Cities Mission (2015): Modernizing urban infrastructure and
+          technology-enabled cities.
+        </li>
+        <li>
+          Pradhan Mantri Gram Sadak Yojana Expansion: Accelerated rural road
+          connectivity.
+        </li>
+        <li>
+          Sagarmala & Bharatmala Projects: Development of ports, highways, and
+          logistics infrastructure.
+        </li>
+        <li>
+          Highway & Rail Modernization: Expansion of expressways,
+          semi-high-speed trains (like Vande Bharat Express).
+        </li>
+        <li>
+          Pradhan Mantri Jan Dhan Yojana (PMJDY) (2014): Large-scale financial
+          inclusion drive, opening millions of bank accounts.
+        </li>
+      </ul>
+    </div>
+    <div class="footer"><h4>made by khushboo</h4></div>
   </body>
 </html>
